UI and Readability fixes

--- a/game/src/index.css
+++ b/game/src/index.css
@@ -5,22 +5,26 @@ body {
 }
 
 .white-card, .black-card {
-  width: 150px;
-  height: 200px;
+  margin: 5px;
+  padding: 5px;
+  max-width: 200px;
+  min-width: 150px;
+  height: 250px;
   font-size: 20px;
   text-align: center;
-  border: 3px solid black;
   font-weight: bold;
 }
 
 .white-card {
   color: black;
   background: #e9e9e8;
+  border: 3px solid black;
 }
 
 .black-card {
   color: white;
   background: black;
+  border: 3px solid #e9e9e8;
 }
 
 #user-name {
